--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,5 +11,21 @@
 
     <artifactId>client</artifactId>
 
+    <dependencies>
+        <dependency>
+            <artifactId>common</artifactId>
+            <groupId>ru.sbrf.atm</groupId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
