--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:atmdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #http://localhost:8080/h2-console/
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:file:/Users/denisrodin/demo
+#spring.datasource.url=jdbc:h2:file:/Users/a16706828/demo
